<resources>
    <string name="app_name">degismedendegisin</string>
    <string name="girisyap">Hesabın zaten var mı? <b>Giriş yap.</b></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kullanim">Kaydol Seçeneğine Tıklayarak Değişmeden Değişin\'in <b>Kullanım Hüküm ve Koşulları\'nı</b> kabul etmiş olursun.</string>
    <string name="kayitol">Hesabın yok mu? <b>Kaydol</b></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="fonksiyon">\' Fonkskiyon yoksa güzel hissetmezsiniz\'</string>
    <string name="fonksiyontitle"><b>Fonksiyon</b></string>
    <string name="fomksiyonInfo">Nefes alamayan koku duyusunu hissetmeyen tatlı yüzünü azalan devamlı sinüzit ataklarına neden olan, burunda kabuklanma yapan Rinoplasti ameliyatı yüzü güzelleştirmiyor. Kişiyi mutsuz ediyor.</string>
    <string name="buruntitle"><b>Yüzle Uyumlu Burun</b></string>
    <string name="burunInfo">Yüze uyumlu olmayan burun düzü güzelleştirmez dünyanın en güzel tasarlanmış burnunu uyumsuz bir yüzde düşündüğün zaman o burun görünür olmaya başlayacaktır ben konuşurken karşındakinin gözüne bakarım karşındaki konuşurken dudaklarına bakarım gözden dudağa geçerken o burun ben buradayım diyorsa o burun o yüze ait değilmişiz olayı uyandırır o yüzü güzelleştirmeyecektir.</string>
    <string name="burunInfo2">(Aşırı kalkık yada düşük, kavisli ya da kemerli, burun ucu sivri ya da çimdiklenmiş gibi dar ya da top gibi geniş. Bu da yüzü güzelleştirmez.)</string>
    <string name="yuztitle"><b>Burna Uyumlu Yüz</b></string>
    <string name="yuzInfo">Rinoplasti yapıldı. Ama yine de güzel tam uyumlu değil. O halde yüzde doğal değişiklikler yapılabilir mi? mesela çene ucuna yönelik bir müdahale, alın bölgesinde dolgunlaştırması, göz altı çukurlarının düzeltilmesi. En az söz edilen ama bir o kadar da önemli bir durum öyle ki bilim ve sanatın bir üst noktada buluştuğu Rinoplasti ameliyatlarında bence sanatsal bakış burada önem kazanıyor.Bu konuyu da hekiminizle konsülte edebilmeli yani konuşabilmelisiniz. Sonrasında tercih size kalmalı. Yaptırırsınız ya da yaptırmazsınız. Unutmayın. Ameliyat öncesi bütün seçenekleri değerlendirirseniz pişman olmazsınız</string>
    <string name="randevutitle"><b>1. Muayene randevusu alın</b></string>
    <string name="randevuInfo1">Burun içi muayenesi olacaksınız nefes almanız da problem olmasa dahi bu muayene önemli.</string>
    <string name="randevuInfo2">Fotoğrafımız çekilecek. Bu önemli çünkü; hem planlama aşamasında hem de amelyat sırasında bu fotoğraflara ihtiyacımız var.</string>
    <string name="randevuInfo3">Görüşme esnasında daha önce ameliyat olmuş ve sizinle benzer işlemlerin yapılacağı hastaların öncesi sonrası fotoğraflarını göreceksiniz.</string>
    <string name="randevuInfo4">Sizin fotoğraflarınız üç boyutlu simülasyon yapılacak.</string>
    <string name="randevuInfo5">Ameliyat olmaya karar verirseniz asistanlarım uygun tarihi belirleyecek.</string>
    <string name="estetiktitle"><b>2. Burun estetiği ameliyatı nerede oluyor</b></string>
    <string name="estetikInfo1">Burun Estetiği ameliyatlarını genel anestezi altında ve tam teşekküllü hastane ortamı da yapıyorum.</string>
    <string name="estetikInfo2">Antalya\'da memorial Antalya hastanesi;</string>
    <string name="estetikInfo3">İstanbul\'da memorial Bahçelievler hastanesi ilk tercihim.</string>
    <string name="onceIlactitle"><b>3. Ameliyat öncesi ilaç kullanımı</b> </string>
    <string name="onceIlactInfo">Kullandığınız tüm ilaçları mutlaka belirtin. Aspirin ve türevi ilaçlar bir hafta öncesinden kesilmelidir.</string>
    <string name="siklustitle"><b>4. Menstrüel siklus döneminde ameliyat olur mu?</b> </string>
    <string name="siklusinfo">Menstrüel siklus döneminde ameliyat olunabilir. Ameliyatın hemen sonrasında burun ve çevresinde oluşan ödem beklenenden biraz daha fazla olabilir.</string>
    <string name="sigaratitle"><b>5.Sigara kullanımı</b> </string>
    <string name="sigaraInfo">Ameliyat sonrası en az üç hafta sigara kullanmamanız gerekir. (Aslında hiç kullanmayın)</string>
    <string name="griptitle"><b>6. Ameliyatın hemen öncesinde nezle grip olursam veya nezle grip gibi hissedersem ne olur?</b> </string>
    <string name="gripInfo">Böyle bir durumda Milat öncesi muayene ve kan tahlilleri önemlidir. Muayene ve tahlillerde problem yoksa ameliyatı yapıyoruz.</string>
    <string name="gelirkentitle"><b>7. Hastaneye gelirken;</b> </string>
    <string name="olmadimbir">Ameliyat sırasında burun üst kısmındaki <b>“kıkırdak – kemik – doku bütünlüğü”</b>nün korunması erken iyileşmeyi sağlar.</string>
    <string name="olmadimiki"><b>Neden ameliyat sırasında yaptığım burunlara böyle dokunuyorum?</b></string>
    <string name="olmadımuc"><b>Ameliyat sırasında kemik – kıkırdak – yumuşak doku ve cilt bütünlüğünü bozmamaya çalışıyorum.</b></string>
    <string name="olmadımdort">Burun üstündeki cildi kaydırınca altındaki doku bütünlüğü olabildiğince sağlam. Bunun 2 tane önemli avantajı var:</string>
    <string name="olmadımbes">1- Var olanı en az müdahale ile sadece problemli olanı düzeltmek amacım. Yani en doğal sonucu elde etmek bu şekilde mümkün.</string>
    <string name="olmadımalti">2- Dokulara ne kadar az hasar verirseniz o kadar çabuk iyileşiyor.</string>
    <string name="olmadımyedi">Bilinen bir gerçek var ki vücutta kesilen veya ayrılan dokular doğal yapısındaki ile tamamen aynı iyileşmiyor.</string>
    <string name="agrimolurmu"><b>Ağrım olur mu?</b></string>
    <string name="agrımolurmusubtitle">Burun estetiği ameliyatlarından sonra ağrı artık olmuyor. Bu, ya hiç oluşmuyor ya da uygun ilaçlarla engelliyoruz.</string>
    <string name="agrımolurmubir">•	Ameliyattan ilk çıktığınız anda burundan nefes alıp verebileceksiniz. Sonra kabul ve pıhtılar birikecek, şişlikler artacaktır.</string>
    <string name="agrımolurmuiki">•	Ameliyattan ilk çıktığınızda hem şişlikler hem de bantların etkisiyle burun şeklinizin görüntüsüne aldanmayın.</string>
    <string name="agrımolurmuuc">•	Ameliyattan sonraki gün mutlaka duş alın. Bu sizi rahatlatacaktır.</string>
    <string name="agrımolurmudort">• Burun delikleri içinde kabuk ve pıhtılar birikecek. Pamukla kulak çubuğunu oksijenli suya batırıp, burun deliklerini temizlemeye çalışın. Kulak çubuğunu canınız yanmayacak kadar burun içine sokabilirsiniz.</string>
    <string name="agrımolurmubes">•	Tampon kullanmadığım için ilk gün sızıntıların olması çok normal.</string>
    <string name="agrımolurmualti">• Eğer kullanıldı ise burun içi silikonlar ameliyat sonrası 2-6 gün içinde alınacaktır. Silikon alma işlemi muayenehanede yapılan, ağrısız bir işlemdir. Burnunuzdan kocaman sümük çıkıyormuş hissi verir.</string>
    <string name="agrımolurmuyedi">• Burnunuzda silikonlar olduğu zamanlar hafif nezle, grip hali olur. Bu vücudun silikonlara verdiği cevaptan kaynaklanan bir durumdur, silikonlar alındıktan kısa süre sonra geçecektir.</string>
    <string name="agrımolurmusekiz">• Silikonlar alındıktan hemen sonra rahat nefes alıp vermeye başlarsınız. Ancak kabuk ve akıntılar nedeni ile bazen burnunuz tıkanabilir. Bunu önlemek için size verilen ilaçları düzenli kullanmanız gerekmektedir. Hastanede verilmeye başlanacak nemlendirici damla kabuklanmayı önlemede yardımcı olur.</string>
    <string name="agrımolurmudokuz">• Ameliyat sonrası evde kullanmanız gereken ilaçları, taburcu olmadan önce asistanım size anlatacak.</string>
    <string name="agrımolurmuon">• Yaklaşık 10 gün boyunca nezle-grip gibi hissedeceksiniz. Hapşırırken ağzınızı açık tutun.</string>
    <string name="agrımolurmuonbir">• 10 gün boyunca başınız yüksek yatın. 2 yastık kullanabilirsiniz.</string>
    <string name="agrımolurmuoniki">• Yaklaşık 1 ay boyunca gözlük kullanmamanız gerekiyor. (Bu sürelerde mini değişiklikler olursa size ileteceğim.) Önceki dönemlerde bu süre 3-6 ay kabul edilirdi. Micro Hybrid Rhinoplasty tekniğimizde 1 ay yeterli.</string>
    <string name="agrımolurmuonuc">• 2 ay boyunca güneş koruyucu krem kullanın. (Dikkat: Güneşe çıkmayın demiyorum! Güneş kremi kullanmak yeterli.)</string>
    <string name="agrımolurmuondort">• 10-14 gün sonra yüzmek serbest.</string>
    <string name="agrımolurmuonbes">• Burnunuzda darbe gelmeyecek sporlara 2-3 hafta sonra başlayabilirsiniz.</string>
    <string name="agrımolurmuonalti">• Burun üzerindeki plastik kalıp 5-7 gün içinde alınıp üzerine ten renginde ince bantlar yapıştırılır. 4-7 gün süre ile bu bantlar burun üzerinde kalır. Yurt dışından gelen veya 2. hafta kontrole gelemeyecek olan hastalarım bu ten rengi bantları kendileri çıkarabilirler.</string>
    <string name="agrımolurmuonyedi"><b>• Özetle iki hafta sonrasında ameliyat öncesine göre daha iyi bir görüntü elde edilir.</b></string>
    <string name="agrımolurmuondokuz">•	Silikonlar ve kalıp alındıktan sonra burun iki gün dokunmaya karşı hassas olacaktır.</string>
    <string name="agrımolurmuyirmi">• Çok nadir bazı durumlar harici burun masajı yapmanıza gerek yoktur. İhtiyaç duyulursa nasıl ve nereye masaj yapılacağını biz size söyleyeceğiz.</string>
    <string name="ozgecmisbir">İstanbul Üniversitesi İstanbul Tıp Fakültesi’nde tıp eğitimini tamamladı. Tıp Fakültesi eğitimi sırasında ABD’de Columbia Üniversitesi’nde Genel Cerrahi stajı yaptı.</string>
    <string name="ozgecmisiki">Tıp Doktoru ünvanını aldıktan sonra İstanbul üniversitesi Temel Bilimler Bölümünde çalıştı. Daha sonra İstanbul Bakırköy Dr.Sadi Konuk Eğitim ve Araştırma Hastanesi’nde Kulak Burun Boğaz ve Baş ve Boyun Cerrahisi ihtisasını tamamladı.</string>
    <string name="ozgecmisüc">Uzmanlık sonrası Burun ve Yüz Estetiği alanında yoğunlaşarak bu konuda çeşitli çalışmalarda bulundu.</string>
    <string name="ozgecmisdort">» ABD’de Dr.Niamtu Kliniği’nde yüz germe ve yağ dokusu enjeksiyonu teknikleri ile ilgili eğitim ve çalışmalara katıldı.</string>
    <string name="ozgecmisbes">» Almanya Erlangen’de Burun ve Yüz Estetiği; Rinoplasti, yüz germe, blefaroplasti ve kulak estetiği üzerine kadavra çalışmalı eğitim aldı.</string>
    <string name="ozgecmisalti">» Burun Okulu kurucusu ve Türkiye’de balon sinoplasti ameliyatının ilk uygulayıcısı olan Dr.Süreyya Şeneldir ile Burun Estetiği, Revizyon Burun Estetiği ve Balon Sinoplasti üzerine eğitim aldı ve çalışmalarda bulundu.</string>
    <string name="ozgecmisyedi">» Almanya Stuttgart’ta Dr.Wolfgang Gubisch’ten Rinoplasti eğitimi aldı</string>
    <string name="ozgecmissekiz">» Almanya Frankfurt’ta Medikal Estetik Sertifikasyonu; ameliyatsız yüz gençleştirme uygulamaları, botulinum toksini uygulamaları, yüz dolguları ve mezoterapi uygulamaları eğitimi aldı.</string>
    <string name="ozgecmisdokuz">» Ankara GATA’da Horlama ve Uyku Apnesi Kursu</string>
    <string name="ozgecmison">» İzmir Dokuz Eylül Üniversitesi’nde Endoskopik Sinüs Cerrahisi Kadavra uygulamalı eğitimine katıldı.</string>
    <string name="ozgecmisonbir">» AO Maksillofasyal Cerrahi Uluslararası Sertifikası</string>
    <string name="ozgecmisoniki">» Bulgaristan Sofia’da Dr.Nikolay Serdev ile iple yüz asma ve ameliyatsız yüz gençleştirme çalışmalarında bulundu.</string>
    <string name="ozgecmisonuc">» Almanya Münih’te Dr.Matthias Winter’den Otoplasti (Kepçe kulak estetiği) eğitimi aldı </string>
    <string name="ozgecmisondort">» Giovanni Botti ve Mario Caravello ile Orta Yüz Germe ve Blefaroplasti cerrahisi Kadavra çalışmalı eğitimine katıldı.</string>
    <string name="ozgecmisonbes">» Dermatokozmetoloji alanında kendini kabul ettirmiş Dr. Uliana Gout ile Botulinum Toksin Uygulamalar, Dolgu, PRP ve antiaging uygulamaları eğitimi aldı.</string>
    <string name="ozgecmisonalti">» Almanya Bielefeld’de Dr.Nanna Y.Schürer ile ameliyatsız yüz gençleştirme ve endüstrinin güncel uygulamaları üzerine çalışmalarda bulundu.</string>
</resources>