<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    android:orientation="vertical"
    tools:context=".fragment.AmeliyatOldumFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/alex_brush"
                android:text="@string/fonksiyon"
                android:textAlignment="center"
                android:textColor="#002158"
                android:textSize="30sp" />


            <ImageView
                android:layout_width="400dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:src="@drawable/infofotobir"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/actor"
                android:text="@string/olmadimbir"
                android:textColor="#002158"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/actor"
                android:text="@string/olmadimiki"
                android:textColor="#002158"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/actor"
                android:text="@string/olmadımuc"
                android:textColor="#002158"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/actor"
                android:text="@string/olmadımdort"
                android:textColor="#002158"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/actor"
                android:text="@string/olmadımbes"
                android:textColor="#002158"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/actor"
                android:text="@string/olmadımalti"
                android:textColor="#002158"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/actor"
                android:text="@string/olmadımyedi"
                android:textColor="#002158"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="400dp"
                android:layout_height="400dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/agrimolurmu"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:text="@string/agrimolurmu"
                android:textColor="#002158"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/actor"
                android:text="@string/agrımolurmusubtitle"
                android:textColor="#002158"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/actor"
                android:text="@string/agrımolurmubir"
                android:textColor="#002158"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/actor"
                android:text="@string/agrımolurmuiki"
                android:textColor="#002158"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/actor"
                android:text="@string/agrımolurmuuc"
                android:textColor="#002158"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/actor"
                android:text="@string/agrımolurmudort"
                android:textColor="#002158"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/actor"
                android:text="@string/agrımolurmubes"
                android:textColor="#002158"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/actor"
                android:text="@string/agrımolurmualti"
                android:textColor="#002158"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/actor"
                android:text="@string/agrımolurmuyedi"
                android:textColor="#002158"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/actor"
                android:text="@string/agrımolurmusekiz"
                android:textColor="#002158"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/actor"
                android:text="@string/agrımolurmudokuz"
                android:textColor="#002158"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/actor"
                android:text="@string/agrımolurmuon"
                android:textColor="#002158"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/actor"
                android:text="@string/agrımolurmuonbir"
                android:textColor="#002158"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/actor"
                android:text="@string/agrımolurmuoniki"
                android:textColor="#002158"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/actor"
                android:text="@string/agrımolurmuonuc"
                android:textColor="#002158"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/actor"
                android:text="@string/agrımolurmuondort"
                android:textColor="#002158"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/actor"
                android:text="@string/agrımolurmuonbes"
                android:textColor="#002158"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/actor"
                android:text="@string/agrımolurmuonalti"
                android:textColor="#002158"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/actor"
                android:text="@string/agrımolurmuonyedi"
                android:textColor="#002158"
                android:textSize="18sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/actor"
                android:text="@string/agrımolurmuyirmi"
                android:textColor="#002158"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/actor"
                android:text="@string/agrımolurmuondokuz"
                android:textColor="#002158"
                android:textSize="18sp" />


        </LinearLayout>
    </ScrollView>



</LinearLayout>